tests/models/enum/named/i128/fail/max_items.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(max_items = 2)]
        value: i128
    },
}
fn main() {}
